# new_cmd

./: .gitignore  .gitmodules  CMakeLists.txt  build.bat  build.ninja  buildsdk.bat  dune  dune-project  interpret  interpreter.ml  lexer.ml  lexer.s  license  log  main.ml  notes.txt  parser.ml  run  run.sh  test.cc  testing.bat  token.ml
notes/: anothertodo  anothertodo.tx  differences.txt  env_caching.txt  extension_api.txt  note1.txt  note2.txt  note4.tx  syntax.txt  todo.txt  todo2.txt  wildopts_far.txt
sdk/: cmd_sdk.hh
sdk/example_extension/: build.bat  extension.asm  main.cpp  std.i
src/: commands.cc  commands.hh  dllheader.hh  extension_api.cc  extension_api.hh  interpreter.cc  interpreter.hh  lexer.cpp  lexer.hpp  main.cpp  nodeimpl.cxx  nodes.hh  parser.cpp  parser.hpp  parser_interpreter_shared.hh  shared.hh  standard.c  standard.h  utility.c  win.cc  win.hh
src/extension_api/: dllheader.hh  extension_api.cc  extension_api.hh  extension_api.s
src/extension_api/sdk/: compress.c
src/interpreter/: commands.cc  commands.hh  interpreter.cc  interpreter.hh  nodeimpl.cxx  nodes.hh
src/interpreter/lexer/: lexer.cpp  lexer.hpp  token.hpp
src/interpreter/parser/: parser.cpp  parser.hpp
src/sdk/: compress.c  lz77comp.h  sdefl.h
src/utilities/: file_utils.c  file_utils.h  hashing.cpp  hashing.hpp
test/: realtest.bat  realtest2.bat  testing.bat
tests/: bench.bat  envvar.bat  example_breakdown.txt  for.bat  if.bat  if2.bat  test.bat
